Add more tests and cleanup javadoc